5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1715_3068.log
== TEST (2019-05-02 16:16:40) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
 if(((dado1)or(dado2))<1)or(((dado1)or(dado2))>10):
		print(Entrada Invalida)
elif(arma==CIMITARRA):
	 print(2*s+2*d)
elif(arma==KATANA):
	 print(2*s+d)
elif(arma==SABRE):
	 print(s=2*d)
else:
	 print(Entrada Invalida)
-- ERROR:
File "XXXX", line 6
    if(((dado1)or(dado2))<1)or(((dado1)or(dado2))>10):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:20:18) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
 if(((dado1)<1)or((dado2)<1))or((dado1)or(dado2)>10):
		print(Entrada Invalida)
elif(arma==CIMITARRA):
	 print(2*s+2*d)
elif(arma==KATANA):
	 print(2*s+d)
elif(arma==SABRE):
	 print(s=2*d)
else:
	 print(Entrada Invalida)
-- ERROR:
File "XXXX", line 6
    if(((dado1)<1)or((dado2)<1))or((dado1)or(dado2)>10):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:22) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
 if((dado1)or((dado2))>1)or(d>0):
		print(Entrada Invalida)
elif(arma==CIMITARRA):
	 print(2*s+2*d)
elif(arma==KATANA):
	 print(2*s+d)
elif(arma==SABRE):
	 print(s=2*d)
else:
	 print(Entrada Invalida)
-- ERROR:
File "XXXX", line 6
    if((dado1)or((dado2))>1)or(d>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:44) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
 if(((dado1)or((dado2))>1)or(d>0):
		print(Entrada Invalida)
elif(arma==CIMITARRA):
	 print(2*s+2*d)
elif(arma==KATANA):
	 print(2*s+d)
elif(arma==SABRE):
	 print(s=2*d)
else:
	 print(Entrada Invalida)
-- ERROR:
File "XXXX", line 6
    if(((dado1)or((dado2))>1)or(d>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:24:27) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
 if(dado1<1)or(d<0):
		print(Entrada Invalida)
elif(arma==CIMITARRA):
	 print(2*s+2*d)
elif(arma==KATANA):
	 print(2*s+d)
elif(arma==SABRE):
	 print(s=2*d)
else:
	 print(Entrada Invalida)
-- ERROR:
File "XXXX", line 6
    if(dado1<1)or(d<0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:24:29) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
 if(dado1<1)or(d<0):
		print(Entrada Invalida)
elif(arma==CIMITARRA):
	 print(2*s+2*d)
elif(arma==KATANA):
	 print(2*s+d)
elif(arma==SABRE):
	 print(s=2*d)
else:
	 print(Entrada Invalida)
-- ERROR:
File "XXXX", line 6
    if(dado1<1)or(d<0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:24:41) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
 if((dado1<1)or(d<0)):
		print(Entrada Invalida)
elif(arma==CIMITARRA):
	 print(2*s+2*d)
elif(arma==KATANA):
	 print(2*s+d)
elif(arma==SABRE):
	 print(s=2*d)
else:
	 print(Entrada Invalida)
-- ERROR:
File "XXXX", line 6
    if((dado1<1)or(d<0)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:05) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
 if((dado1)<1)or((d)<0):
		print(Entrada Invalida)
elif(arma==CIMITARRA):
	 print(2*s+2*d)
elif(arma==KATANA):
	 print(2*s+d)
elif(arma==SABRE):
	 print(s=2*d)
else:
	 print(Entrada Invalida)
-- ERROR:
File "XXXX", line 6
    if((dado1)<1)or((d)<0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:39) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
 if(d<0):
		print(Entrada Invalida)
elif(arma==CIMITARRA):
	 print(2*s+2*d)
elif(arma==KATANA):
	 print(2*s+d)
elif(arma==SABRE):
	 print(s=2*d)
else:
	 print(Entrada Invalida)
-- ERROR:
File "XXXX", line 6
    if(d<0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:48) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
 if((d)<0):
		print(Entrada Invalida)
elif(arma==CIMITARRA):
	 print(2*s+2*d)
elif(arma==KATANA):
	 print(2*s+d)
elif(arma==SABRE):
	 print(s=2*d)
else:
	 print(Entrada Invalida)
-- ERROR:
File "XXXX", line 6
    if((d)<0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:26:01) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
 if((d)<(0)):
		print(Entrada Invalida)
elif(arma==CIMITARRA):
	 print(2*s+2*d)
elif(arma==KATANA):
	 print(2*s+d)
elif(arma==SABRE):
	 print(s=2*d)
else:
	 print(Entrada Invalida)
-- ERROR:
File "XXXX", line 6
    if((d)<(0)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:20) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1)or(dado2)<1)or(d<0):
	print(Intrada Invalida)
elif(arma==CIMITARRA):
	 print(2*s+2*d)
elif(arma==KATANA):
	 print(2*s+d)
elif(arma==SABRE):
	 print(s=2*d)
else:
	 print(Entrada Invalida)
-- ERROR:
File "XXXX", line 7
    print(Intrada Invalida)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:43) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1)or(dado2)<1)or(d<0):
	 print(Entrada Invalida)
elif(arma==CIMITARRA):
	 print(2*s+2*d)
elif(arma==KATANA):
	 print(2*s+d)
elif(arma==SABRE):
	 print(s=2*d)
else:
	 print(Entrada Invalida)
-- ERROR:
File "XXXX", line 7
    print(Entrada Invalida)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:03) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1)or(dado2)<1)or(d<0):
	 print(Entrada Invalida)
elif(arma==CIMITARRA):
	 print(2*s+2*d)
elif(arma==KATANA):
	 print(2*s+d)
elif(arma==SABRE):
	 print(s=2*d)
else:
	 print(Entrada Invalida)
-- ERROR:
File "XXXX", line 7
    print(Entrada Invalida)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:19) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1)or(dado2)<1)or(d<0):
	 print(Entrada Invalida)
elif(arma==CIMITARRA):
	 print(2*s+2*d)
elif(arma==KATANA):
	 print(2*s+d)
elif(arma==SABRE):
	 print(s=2*d)
else:
	 print(Entrada Invalida)
-- ERROR:
File "XXXX", line 7
    print(Entrada Invalida)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:35) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1)or(dado2)<1)or(d<0):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s=2*d)
else:
	 print("Entrada Invalida")
-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:17) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1)or(dado2)<1)or(d<0):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s=2*d)
else:
	 print("Entrada Invalida")
-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:12) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1)or(dado2)<1)or(d<0):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:34:03) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1)or(dado2)>1)or(d>0):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:34:50) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1)or(dado2)>1)or(d>0):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:44) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1>1)or(dado2>1)or(d>0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:51) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- ERROR:
File "XXXX", line 6
    if((dado1<1)or(dado2<1)or(d<0):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:02) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if((dado1<1)or(dado2<1)or(d<0)):
TypeError: '<' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:10) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if(((dado1)<1)or((dado2)<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(((dado1)<1)or((dado2)<1)or(d<0)):
TypeError: '<' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:43) 
-- CODE:
arma = input("arma:").upper()
d = input("destreza:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if((dado1<1)or(dado2<1)or(d<0)):
TypeError: '<' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:32) 
-- CODE:
arma = input("arma:").upper()
d = int(input("d:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- ERROR:
File "XXXX", line 3
    dado1 = int(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:47) 
-- CODE:
arma = input("arma:").upper()
d = int(input("d:")
dado1 = int(input("dado:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- ERROR:
File "XXXX", line 3
    dado1 = int(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:06) 
-- CODE:
arma = input("arma:").upper()
d = int(input("d:")
dado1 = int(input("dado1:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- ERROR:
File "XXXX", line 3
    dado1 = int(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:22) 
-- CODE:
arma = input("arma:").upper()
d = int(input("d:")
dado1 = int(input("dado1:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- ERROR:
File "XXXX", line 3
    dado1 = int(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:45:50) 
-- CODE:
arma = input("arma:").upper()
d = int(input("d:")
dado1 = int(input("dado1:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- EXECUTION TIME:
0.149673
-- ERROR:
  File "/home/codebench/codes/1715/3068/main.py", line 3
    dado1 = int(input())
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:51) 
-- CODE:
arma = input("arma:").upper()
d = int(input("d:")
dado1 = int(input("dado1:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- ERROR:
File "XXXX", line 3
    dado1 = int(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:46:21) 
-- CODE:
arma = input("arma:").upper()
d = int(input("d:")
dado1 = int(input("dado1:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- ERROR:
File "XXXX", line 3
    dado1 = int(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:47:27) 
-- CODE:
arma = input("arma:").upper()
d = int(input("d:"))
dado1 = int(input("dado1:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:47:40) 
-- CODE:
arma = input("arma:").upper()
d = int(input("d:"))
dado1 = int(input("dado1:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- EXECUTION TIME:
0.195872
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:48:41) 
-- CODE:
arma = input("arma:").upper()
d = int(input("d:"))
dado1 = int(input("dado1:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:49:51) 
-- CODE:
arma = input("arma:").upper()
d = int(input("d:"))
dado1 = int(input("dado1:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- EXECUTION TIME:
0.147308
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:08:10) 
-- CODE:
arma = input("arma:").upper()
d = int(input("d:"))
dado1 = int(input("dado1:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:12:35) 
-- CODE:
arma = input("arma:").upper()
d = int(input("d:"))
dado1 = int(input("dado1:"))
dado2 = int(input("dado2:"))
s=(dado1+dado2)
if((dado1<1)or(dado2<1)or(d<0)):
	 print("Entrada Invalida")
elif(arma=="CIMITARRA"):
	 print(2*s+2*d)
elif(arma=="KATANA"):
	 print(2*s+d)
elif(arma=="SABRE"):
	 print(s+2*d)
else:
	 print("Entrada Invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
